src/test/resources/purescript_examples/failing/OperatorSections.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith TypesDoNotUnify\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSModuleNameImpl(ModuleName)
        PSQualifiedImpl(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSImportModuleNameImpl(ImportModuleName)
          PSQualifiedImpl(Qualified)
            PsiElement(proper name)('Prelude')
          PsiElement(whitespace)('\n\n')
      PSValueDeclarationImpl(ValueDeclaration)
        PsiElement(identifier)('main')
        PsiElement(whitespace)(' ')
        PSNamedBinderImpl(NamedBinder)
          <empty list>
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSValueImpl(Value)
          PSPrefixValueImpl(PrefixValue)
            PsiElement(do)('do')
            PsiElement(whitespace)('\n  ')
            PSDoNotationValueImpl(DoNotationValue)
              PSValueImpl(Value)
                PSPrefixValueImpl(PrefixValue)
                  PSParensImpl(Parens)
                    PsiElement(()('(')
                    PSValueImpl(Value)
                      PSPrefixValueImpl(PrefixValue)
                        PSBooleanLiteralImpl(BooleanLiteral)
                          PsiElement(true)('true')
                          PsiElement(whitespace)(' ')
                        PsiElement(`)('`')
                        PsiElement(identifier)('not')
                        PsiElement(`)('`')
                        PsiElement(whitespace)(' ')
                        PSVarImpl(Var)
                          PSQualifiedImpl(Qualified)
                            PsiElement(identifier)('_')
                    PsiElement())(')')
                    PsiElement(whitespace)('\n')
